--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,42 +1,26 @@
-#spring:
-#  profiles:
-#    active: local
-#  datasource:
-#    driver-class-name: org.postgresql.Driver
-#    url: jdbc:postgresql://localhost:5432/ranobe
-#    username: postgres
-#    password: postgres
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#    show-sql: true
-#    database: postgresql
-#    database-platform: org.hibernate.dialect.PostgreSQLDialect
-#    open-in-view: false
-#    generate-ddl: true
-#logging:
-#  pattern:
-#    console: "%d %-5level %logger : %msg%n"
-#  level:
-#    org.springframework: info
-#    org.hibernate: info
-pring:
+spring:
   datasource:
-    url: jdbc:h2:mem:mydb
-    username: sa
-    password: password
-    driverClassName: org.h2.Driver
+    url: ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/ranobeapp}
+    username: ${JDBC_DATABASE_USERNAME:postgres}
+    password: ${JDBC_DATABASE_PASSWORD:postgres}
+    dbcp2:
+      max-wait-millis: 30000
+      validation-query: select 1
+      validation-query-timeout: 30
   jpa:
-    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
-server:
-  port: 8080
+    hibernate:
+      ddl-auto: update
+    open-in-view: false
+    properties:
+      hibernate:
+        jdbc:
+          lob:
+            non_contextual_creation: true
+        id:
+          new_generator_mappings: true
 app:
   web:
     cors:
       allowed-origins: '*'
       allowed-headers: '*'
       allowed-methods: '*'
-spring:
-  mvc:
-    pathmatch:
-      matching-strategy: ANT_PATH_MATCHER
